update swagger api
