# server/src/main/resources/api-docs.yaml
@@ -25,6 +25,11 @@ paths:
             oneof:
               - $ref: '#/definitions/MetadataEditMode'
               - $ref: '#/definitions/MetadataSafeMode'
+              - $ref: '#/definitions/RemoteNotFound'
+        '412':
+          description: 'storagelink is not found for the file'
+          schema:
+            $ref: '#/definitions/ErrorReport'
         '500':
           description: Internal Server Error
           schema:
@@ -99,7 +104,6 @@ definitions:
       - syncMode
       - syncStatus
       - remoteUri
-      - isExecutionMode
       - storageLinks
     properties:
       syncMode:
@@ -115,9 +119,19 @@ definitions:
       remoteUri:
         type: string
         description: 'gs://{bucketName}/{objectName}'
-      isExecutionMode:
-        type: boolean
-        description: whether the notebook has execution mode enabled
+      storageLink:
+        $ref: '#/definitions/StorageLink'
+  RemoteNotFound:
+    description: ''
+    required:
+      - syncMode
+      - syncStatus
+      - storageLinks
+    properties:
+      syncMode:
+        type: '#/definitions/SyncMode'
+      syncStatus:
+        $ref: '#/definitions/SyncStatus'
       storageLink:
         $ref: '#/definitions/StorageLink'
   MetadataSafeMode:
@@ -138,6 +152,8 @@ definitions:
       - LIVE
       - DESYNCHRONIZED
       - REMOTE_NOT_FOUND
+      - REMOTE_CHANGED
+      - LOCAL_CHANGED
   ErrorReport:
     type: string
   Localize:
